# LeadForge

./: .env.example  .gitignore  Makefile  docker-compose.prod.yml  docker-compose.yml
.github/workflows/: deploy-backend.yml
backend/: Dockerfile  alembic.ini  pyproject.toml  worker.py
backend/alembic/: env.py  script.py.mako
backend/alembic/versions/: .gitkeep  20260720_1330-31ae83e40c68_initial.py
backend/app/: __init__.py  exceptions.py  main.py
backend/app/ai/: __init__.py  graph.py  sanitizer.py  state.py
backend/app/ai/nodes/: __init__.py  drafter_node.py  qualifier_node.py  scraper_node.py
backend/app/core/: arq_pool.py  config.py  database.py  redis.py  security.py
backend/app/dependencies/: __init__.py  auth.py  db.py  tenant.py
backend/app/models/: __init__.py  base.py  generated_lead.py  job_status.py  target_company.py  tenant.py  user_profile.py
backend/app/repositories/: __init__.py  base.py  generated_lead.py  job_status.py  target_company.py  tenant.py  user_profile.py
backend/app/routers/: __init__.py  generated_leads.py  health.py  target_companies.py  tenants.py  user_profiles.py
backend/app/schemas/: __init__.py  generated_lead.py  job_status.py  target_company.py  tenant.py  user_profile.py
backend/app/services/: __init__.py  generated_lead.py  target_company.py  tenant.py  user_profile.py
backend/app/tasks/: __init__.py  lead_discovery.py
frontend/: package-lock.json  package.json
frontend/src/: middleware.ts
frontend/src/app/: globals.css  layout.tsx  page.tsx  providers.tsx
frontend/src/app/dashboard/: page.tsx
frontend/src/app/icp-rules/: page.tsx
frontend/src/app/pricing/: page.tsx
frontend/src/app/saved-leads/: page.tsx
frontend/src/app/sign-in/[[...sign-in]]/: page.tsx
frontend/src/app/sign-up/[[...sign-up]]/: page.tsx
frontend/src/app/studio/: page.tsx
frontend/src/components/: LeadDetailDrawer.tsx  LeadForgeLogo.tsx  Navbar.tsx  Sidebar.tsx
